--- a/src/8.cdn/index.html
+++ b/src/8.cdn/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>7.splitChunks</title>
+    <title>8.cdn</title>
   </head>
   <body></body>
 </html>
