--- a/src/8.cdn/index.html
+++ b/src/8.cdn/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>8.cdn</title>
+    <script defer src="https://cdn.bootcdn.net/ajax/libs/dayjs/1.11.9/dayjs.min.js"></script>
   </head>
   <body></body>
 </html>
