feat: css-minimizer-webpack-plugin

--- a/src/11.css-minimizer/index.html
+++ b/src/11.css-minimizer/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>11.css-minimizer</title>
   </head>
-  <body></body>
+  <body>
+    <div class="box"></div>
+  </body>
 </html>
