--- a/src/11.webpack_merge_config/index.html
+++ b/src/11.webpack_merge_config/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>9.css_build</title>
+    <title>11.webpack_merge_config</title>
   </head>
   <body>
     <h4>11.webpack_merge_config</h4>
