--- a/src/14.gzip /index.html
+++ b/src/14.gzip /index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>13.scope_hoisting</title>
+    <title>14.gzip</title>
   </head>
   <body>
-    <h4>13.scope_hoisting </h4>
+    <h4>14.gzip</h4>
   </body>
 </html>
